openshift/openlit-otel-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openlit-otel
  namespace: openlit
spec:
  path: /
  to:
    name: openlit
    weight: 100
    kind: Service
  port:
    targetPort: otel-http
